# MATE

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
mate/: config.py  router.py
mate/agents/: base_agent.py  prompts.py  specialist.py
mate/agents/tools/: definitions.py  registry.py
mate/api/: client.py  server.py
mate/core/: base_agent.py  database.py  logger.py  utils.py
mate/orchestration/: prompt.py  router.py  tool_definitions.py
mate/tools/: definitions.py  geocoding.py  meteo.py  registry.py  trail.py  web.py
